--- a/src/app/(payload)/custom.scss
+++ b/src/app/(payload)/custom.scss
@@ -14,7 +14,7 @@
     background: var(--theme-bg);
     box-shadow: 0px 5px 10px var(--theme-elevation-100);
     border-radius: 8px;
-    position: fixed;
+    width: auto;
   }
   
   .typeahead-popover ul {
@@ -88,18 +88,6 @@
     line-height: 20px;
     flex-grow: 1;
     min-width: 150px;
-  }
-  
-  .typeahead-popover li .icon {
-    display: flex;
-    width: 20px;
-    height: 20px;
-    user-select: none;
-    margin-right: 8px;
-    line-height: 16px;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
   }
 
   .icon-menu {
